# GPUTRN0

./: .gitignore  README.md  pyproject.toml
scripts/: README.md  cluster_mnist.py  prepare_mnist_router_data.py  render_mnist_clustering_report.py  run_router_demo.py  sample_distributed_mnist.py  sample_expert_mnist.py  serve_expert_mnist.py  setup_gpu_vm.sh  setup_router_vm.sh  setup_tpu_vm.sh  train_expert_mnist.py  train_router_mnist.py
src/tpugpu/: __init__.py  compat.py  config.py
src/tpugpu/data/: __init__.py  mnist.py
src/tpugpu/demo/: __init__.py  app.py
src/tpugpu/demo/static/: app.js  index.html  styles.css
src/tpugpu/eval/: __init__.py  reporting.py
src/tpugpu/experts/: __init__.py  inference.py  model.py  train.py
src/tpugpu/router/: __init__.py  expert_client.py  inference.py  model.py  train.py
src/tpugpu/sampling/: __init__.py
src/tpugpu/serving/: __init__.py  protocol.py
tests/: __init__.py  test_demo_protocol.py  test_serving_protocol.py
